<resources>
    <string name="app_name">TodoList</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_hint">Task title</string>
    <string name="description_hint">Description</string>
    <string name="confirm_delete">Delete this task?</string>
    <string name="filter_all">All</string>
    <string name="filter_completed">Completed</string>
    <string name="filter_pending">Pending</string>
    <string name="title_tasks">Tasks</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="due_date">Due date</string>
    <string name="attachment">Attachment URI</string>
    <string name="repeat">Repeat</string>
    <!-- Strings para tableros estilo Trello -->
    <string name="title_boards">Tableros</string>
    <string name="add_board">Añadir tablero</string>
    <string name="edit_board">Editar tablero</string>
    <string name="confirm_delete_board">¿Eliminar este tablero?</string>
    <string name="open_board">Abriendo %1$s</string>
</resources>
